--- a/index.travas.html
+++ b/index.travas.html
@@ -98,9 +98,17 @@
     </label>
   </div>
 
-  <div id="content" class="section"></div>
-</div>
-
+    <div id="content" class="section"></div>
+  <!-- Botão para ir para index.comparação -->
+  <div style="margin-top:20px; text-align:center;">
+  <a href="index.comparação" 
+     style="background:#0ea5e9; color:#fff; padding:10px 20px; 
+            border-radius:8px; text-decoration:none; font-weight:600; 
+            display:inline-block;">
+    Ir para Comparação
+    </a>
+  </div>
+</div> <!-- Fim da .wrap -->
 <!-- Modal de Planos -->
 <div id="modal" aria-hidden="true">
   <div class="backdrop" data-close></div>
