--- a/index.travas.html
+++ b/index.travas.html
@@ -99,9 +99,9 @@
   </div>
 
     <div id="content" class="section"></div>
-  <!-- Botão para ir para index.comparação -->
+  <!-- Botão para ir para index.comparacao.html -->
   <div style="margin-top:20px; text-align:center;">
-  <a href="index.comparação" 
+  <a href="index.comparacao.html" 
      style="background:#0ea5e9; color:#fff; padding:10px 20px; 
             border-radius:8px; text-decoration:none; font-weight:600; 
             display:inline-block;">
