--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-  <a href="index.html" class="chip" style="text-decoration:none;margin-top:6px">⬅ Voltar ao Painel</a>
+  <a href="https://grupodvbr.github.io/TRAVAS/" class="chip" style="text-decoration:none;margin-top:6px">⬅ Voltar ao Painel</a>
 </div>
 
 <script>
