--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -97,8 +97,12 @@
     </div>
   </div>
 
-  <a href="https://grupodvbr.github.io/TRAVAS/" class="chip" style="text-decoration:none;margin-top:6px">⬅ Voltar ao Painel</a>
-</div>
+ <a href="javascript:void(0)" 
+   onclick="history.back()" 
+   class="chip" 
+   style="text-decoration:none;margin-top:6px">
+   ⬅ Voltar ao Painel
+</a>
 
 <script>
 /* ===== CONFIG ===== */
